--- a/.gitignore
+++ b/.gitignore
@@ -1,41 +1,66 @@
-# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
-
-# dependencies
-/node_modules
-/.pnp
-.pnp.*
-.yarn/*
-!.yarn/patches
-!.yarn/plugins
-!.yarn/releases
-!.yarn/versions
-
-# testing
-/coverage
-
-# next.js
-/.next/
-/out/
-
-# production
-/build
-
-# misc
-.DS_Store
-*.pem
-
-# debug
+# -------------------------------------
+# Node / npm / yarn / pnpm
+# -------------------------------------
+node_modules/
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 .pnpm-debug.log*
 
-# env files (can opt-in for committing if needed)
-.env*
+# -------------------------------------
+# Next.js
+# -------------------------------------
+.next/
+out/
+build/
 
-# vercel
-.vercel
+# -------------------------------------
+# IntelliJ / IDEA
+# (MUY IMPORTANTE para evitar commits
+# de settings, workspace, etc.)
+# -------------------------------------
+.idea/
+*.iml
+workspace.xml
+shelf/
 
-# typescript
+# -------------------------------------
+# Historia interna y temporales
+# -------------------------------------
+.history/
+*.log
+*.tmp
+*.temp
+
+# -------------------------------------
+# OS Files
+# -------------------------------------
+.DS_Store
+Thumbs.db
+
+# -------------------------------------
+# Environment files
+# No subir .env, .env.local, etc.
+# -------------------------------------
+.env
+.env.local
+.env.*.local
+
+# -------------------------------------
+# TypeScript
+# -------------------------------------
 *.tsbuildinfo
 next-env.d.ts
+
+# -------------------------------------
+# Vercel
+# -------------------------------------
+.vercel/
+
+# -------------------------------------
+# Compiled or temporary files
+# -------------------------------------
+*.zip
+*.gz
+*.tar
+*.rar
